implement get and create recipe, adapt database to frontend changes
